# ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  adhoc.yml  ansible.cfg  bootstrap-debian.yml  bootstrap-raspberrypi.yml  bootstrap-vagrant.yml  bootstrap.sh  bootstrap.yml  cleanup-backups-tasks.yml  cleanup-backups.yml  cleanup-systemd.yml  hosts.ini  playbook.yml  pre-pull-docker-images.yaml  setup-macos.yml  setup.sh  setup.yml  ssh-test.yml  unifi-controller-backup.yml  update-system.yml  update-to-fqdn.py
.github/: renovate.json5
awx/: cleanup.yml  credentials.yml  export.sh  import.sh  provision.yml
awx/vars/: credentials.yml.vault  users.yml.vault
group_vars/: all.yml  desktop.yml
group_vars/all/: vars  vault
host_vars/: all.yml  ectoplasma.yml  firehouse.yml  workstation.yml
host_vars/firehouse/: main.yml
host_vars/spookcentral/: vars  vault
host_vars/workstation/: main.yml  vars  vault
inventory/: home.toml
inventory/group_vars/: docker.yaml
molecule/default/: molecule.yml  playbook.yml  prepare.yml
roles/1password/tasks/: main.yml
roles/apparmor/tasks/: main.yml
roles/arpwatch/tasks/: main.yml
roles/aur-helper/defaults/: main.yml
roles/aur-helper/meta/: main.yml
roles/aur-helper/tasks/: build.yml  main.yml  (+1 more)
roles/ftpserver/files/ftpserver/: pyproject.toml
roles/ftpserver/files/ftpserver/src/ftpserver/: app.py
roles/molecule-resources/: Dockerfile.j2  ansible-lint.yml  base-config-docker.yml  base-config-vagrant.yml  base-config.yml  prepare_python_archlinux.yml  verify_goss_3.7.yml  yamllint.yml
(+437 files in other folders)
