[project]
name = "ftpserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrik Farre",email = "henrik@rockhopper.dk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyftpdlib (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ftpserver", from = "src"}]

[project.scripts]
ftpserver = 'ftpserver.app:run'
healthcheck = 'ftpserver.app:healthcheck'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
